--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@ body {
 }
 
 html { 
-  background: url(../images/30.gif) no-repeat center center fixed; 
+  background: url(https://k3k14.s-ul.eu/nxzLbnl7) no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
