--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
-/* MADE BY CRACKY */
 body {
-  padding-top:15%;
+  padding-left: 50%;
+  padding-top:5%;
 }
 
 html { 
@@ -54,3 +54,12 @@ marquee {
     color: white;
     text-decoration:  none;
     }
+
+.noselect {
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;                                   
+}
